# strategyos-mvp

./: .dockerignore  .gitignore  Makefile  README.md  langgraph.json  pyproject.toml  strategyos-live-after-fix-snapshot.json  strategyos-live-homepage-2026-06-23-1958.json
deploy/: .env.example  .env.secrets.example  Dockerfile  README.md  docker-compose.branch.yml  docker-compose.hetzner-qa.yml  docker-compose.proxy-oidc.yml  docker-compose.release.yml  docker-compose.yml
docs/: business-user-ui-fix-list.md  ceo-view-blocks-explained.md  chat-dashboard-ui-mockup.html  chat-dashboard-ui-plan.md  flexible-invoice-architecture-plan.md  hermes-governed-scenario-engine-plan-2026-07-10.md  knowledge-graph-viz-research.md  neo4j-graph-detectors-plan.md  neo4j-utilization-plan.md  production-deployment-plan.md  qdrant-search-upgrade-plan.md  role-matrix-as-of-2026-07-02.md  strategyos-live-homepage-prototype.html
strategyos_mvp/: __init__.py  agent_execution_log.py  api.py  auth.py  citation_resolver.py  cloud_surface_verifier.py  config.py  cost_levers.py  data_roles.py  detector_contracts.py  evidence.py  executive_design.py  executive_presentation.py  executive_read_model.py  file_traversal.py  final_gate.py  governed_plans.py  graph_queries.py  hatchet_runtime.py  hero_workflow.py  idp.py  ingestion.py  knowledge_graph.py  llm_qa.py  models.py  neo4j_store.py  ocr.py  oracle_finance.py  paths.py  platform_foundation.py  plugins.py  poc_acceptance.py  prepare_inputs.py  prompt_injection.py  qa.py  quality.py  reviewer_runtime.py  run_executor.py  run_poc.py  (+17 more)
(+212 files in other folders)
