[project]
name = "strategyos-mvp"
version = "0.1.0"
description = "StrategyOS production-ready MVP scaffold for finance leakage discovery."
requires-python = ">=3.11"
dependencies = [
  "boto3",
  "fastapi",
  "python-multipart",
  "neo4j",
  "pandas",
  "openpyxl",
  "psycopg[binary]",
  "pypdf",
  "pydantic",
  "reportlab",
  "langgraph>=0.2; python_version >= '3.11'",
  "langgraph-checkpoint-postgres>=2.0; python_version >= '3.11'",
  "uvicorn[standard]",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["strategyos_mvp*"]

[tool.setuptools.package-data]
strategyos_mvp = ["tools/*.swift", "static/*.html", "static/*.css", "static/*.js", "static/vendor/*.js"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
  "integration: opt-in local integration checks that require external services",
]
